--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Story+Script&display=swap" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&family=Story+Script&family=TASA+Explorer:wght@400..800&display=swap" rel="stylesheet');
 
 * {
     margin: 0;
@@ -31,12 +32,12 @@ nav ul {
     display: grid;
     grid-template-rows: repeat(3, 10vw);
     grid-template-columns: repeat(3, 10vw);
-    font-family: 'Roboto', sans-serif;
+    font-family: "Epunda Slab", serif;
     position: relative;
 }
 
 .box {
-    border: 2px solid black;
+    border: 4px solid black;
     font-size: 8vw;
     cursor: pointer;
     display: flex;
@@ -90,10 +91,21 @@ nav ul {
     opacity: 1;
 }
 
-.br-0 { border-right: 0; }
-.bl-0 { border-left: 0; }
-.bt-0 { border-top: 0; }
-.bb-0 { border-bottom: 0; }
+.br-0 {
+    border-right: 0;
+}
+
+.bl-0 {
+    border-left: 0;
+}
+
+.bt-0 {
+    border-top: 0;
+}
+
+.bb-0 {
+    border-bottom: 0;
+}
 
 #reset {
     padding: 12px 30px;
@@ -152,4 +164,19 @@ nav ul {
     color: #333;
     text-shadow: 0 0 8px gold;
     animation: pulse 1.5s infinite;
+    font-family: "TASA Explorer", sans-serif;
+}
+
+
+/* Different colors for X and O */
+.boxtext.X {
+    color: #e63946;
+    /* red for X */
+    text-shadow: 0 0 5px rgba(230, 57, 70, 0.7);
+}
+
+.boxtext.O {
+    color: blue;
+    /* blue for O */
+    text-shadow: 0 0 2px rgba(69, 123, 157, 0.7);
 }
