--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@
 * {
     margin: 0;
     padding: 0;
+    /* background-color: violet; */
 }
-
+body{
+    background-color: white;
+}
 nav {
     background-color: rgb(37, 9, 37);
     color: white;
@@ -37,17 +40,15 @@ nav ul {
 }
 
 .box {
-    border: 4px solid black;
+    border: 4px solid white;
     font-size: 8vw;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: pink;
 }
 
-.box:hover {
-    background-color: rgb(242, 234, 250);
-}
 
 .info {
     font-size: 22px;
